--- a/roundimageview/src/main/res/values/attrs.xml
+++ b/roundimageview/src/main/res/values/attrs.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--&lt;!&ndash;圆角图片&ndash;&gt;-->
-    <declare-styleable name="RoundImageView">
-        <attr name="edgeWidth" format="reference|dimension" />
-        <attr name="edgeRadius" format="reference|dimension" />
-        <attr name="edgeColor" format="reference|color" />
-        <attr name="hoverColor" format="reference|color" />
+    <declare-styleable name="AbsRoundImageView">
+        <attr name="borderWidth" format="dimension|reference"/>
+        <attr name="borderColor" format="color|reference"/>
     </declare-styleable>
 
-
-
+    <declare-styleable name="RoundImageView">
+        <attr name="leftTopRadius" format="dimension|reference"/>
+        <attr name="rightTopRadius" format="dimension|reference"/>
+        <attr name="rightBottomRadius" format="dimension|reference"/>
+        <attr name="leftBottomRadius" format="dimension|reference"/>
+    </declare-styleable>
 
 </resources>
