--- a/roundimageview/src/main/res/values/attrs.xml
+++ b/roundimageview/src/main/res/values/attrs.xml
@@ -2,15 +2,15 @@
 <resources>
 
     <declare-styleable name="AbsRoundImageView">
-        <attr name="borderWidth" format="dimension|reference"/>
-        <attr name="borderColor" format="color|reference"/>
+        <attr name="riv_borderWidth" format="dimension|reference"/>
+        <attr name="riv_borderColor" format="color|reference"/>
     </declare-styleable>
 
     <declare-styleable name="RoundImageView">
-        <attr name="leftTopRadius" format="dimension|reference"/>
-        <attr name="rightTopRadius" format="dimension|reference"/>
-        <attr name="rightBottomRadius" format="dimension|reference"/>
-        <attr name="leftBottomRadius" format="dimension|reference"/>
+        <attr name="riv_leftTopRadius" format="dimension|reference"/>
+        <attr name="riv_rightTopRadius" format="dimension|reference"/>
+        <attr name="riv_rightBottomRadius" format="dimension|reference"/>
+        <attr name="riv_leftBottomRadius" format="dimension|reference"/>
     </declare-styleable>
 
 </resources>
